syntax = "proto3";

option csharp_namespace = "Artemis.Service.Protos.Resource";
import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
import "common.proto";

package Artemis.Service.Protos.Resource;

// 字典服务
service DictionaryService{

	// 查询字典信息
	rpc SearchDictionaryInfo(SearchDictionaryInfoRequest) returns (SearchDictionaryInfoResponse){
		option (google.api.http) = {
			get: "/api/ResourceService/Dictionary"
		};
	}

	// 获取数据字典
	rpc ReadDictionaryInfo(ReadDictionaryInfoRequest) returns (ReadDictionaryInfoResponse){
		option (google.api.http) = {
			get: "/api/ResourceService/Dictionary/{DictionaryId}"
		};
	}

	// 创建数据字典
	rpc CreateDictionary(CreateDictionaryRequest) returns (AffectedResponse){
		option (google.api.http) = {
			post: "/api/ResourceService/Dictionary"
			body: "*"
		};
	}

	// 批量创建数据字典
	rpc BatchCreateDictionary(BatchCreateDictionariyRequest) returns (AffectedResponse){
		option (google.api.http) = {
			post: "/api/ResourceService/Dictionary/BatchCreate"
			body: "Batch"
		};
	}

	// 更新数据字典
	rpc UpdateDictionary(UpdateDictionaryRequest) returns (AffectedResponse){
		option (google.api.http) = {
			put: "/api/ResourceService/Dictionary/{DictionaryId}"
			body: "Dictionary"
		};
	}

	// 批量更新数据字典
	rpc BatchUpdateDictionary(BatchUpdateDictionaryRequest) returns (AffectedResponse){
		option (google.api.http) = {
			put: "/api/ResourceService/Dictionary/BatchUpdate"
			body: "Batch"
		};
	}

	// 删除字典
	rpc DeleteDictionary(DeleteDictionaryRequest) returns (AffectedResponse){
		option (google.api.http) = {
			delete: "/api/ResourceService/Dictionary/{DictionaryId}"
		};
	}

	// 批量删除字典
	rpc BatchDeleteDictionary(BatchDeleteDictionaryRequest) returns (AffectedResponse){
		option (google.api.http) = {
			post: "/api/ResourceService/Dictionary/BatchDelete"
			body: "DictionaryIds"
		};
	}

	// 查询字典项目
	rpc SearchDictionaryItemInfo(SearchDictionaryItemInfoRequest) returns (SearchDictionaryItemInfoResponse){
		option (google.api.http) = {
			get: "/api/ResourceService/Dictionary/{DictionaryId}/Items"
		};
	}

	// 读取字典项目
	rpc ReadDictionaryItemInfo(ReadDictionaryItemInfoRequest) returns (ReadDictionaryItemInfoResponse){
		option (google.api.http) = {
			get: "/api/ResourceService/Dictionary/{DictionaryId}/Items/{DictionaryItemId}"
		};
	}

	// 创建字典项目
	rpc CreateDictionaryItem(CreateDictionaryItemRequest) returns (AffectedResponse){
		option (google.api.http) = {
			post: "/api/ResourceService/Dictionary/{DictionaryId}/Items"
			body: "DictionaryItem"
		};
	}

	// 批量创建字典项目
	rpc BatchCreateDictionaryItem(BatchCreateDictionaryItemRequest) returns (AffectedResponse){
		option (google.api.http) = {
			post: "/api/ResourceService/Dictionary/{DictionaryId}/Items/BatchCreate"
			body: "Batch"
		};
	}

	// 更新字典项目
	rpc UpdateDictionaryItem(UpdateDictionaryItemRequest) returns (AffectedResponse){
		option (google.api.http) = {
			put: "/api/ResourceService/Dictionary/{DictionaryId}/Items/{DictionaryItemId}"
			body: "DictionaryItem"
		};
	}

	// 批量更新字典项目
	rpc BatchUpdateDictionaryItem(BatchUpdateDictionaryItemRequest) returns (AffectedResponse){
		option (google.api.http) = {
			put: "/api/ResourceService/Dictionary/{DictionaryId}/Items/BatchUpdate"
			body: "Batch"
		};
	}

	// 删除字典项目
	rpc DeleteDictionaryItem(DeleteDictionaryItemRequest) returns (AffectedResponse){
		option (google.api.http) = {
			delete: "/api/ResourceService/Dictionary/{DictionaryId}/Items/{DictionaryItemId}"
		};
	}

	// 批量删除字典项目
	rpc BatchDeleteDictionaryItem(BatchDeleteDictionaryItemRequest) returns (AffectedResponse){
		option (google.api.http) = {
			post: "/api/ResourceService/Dictionary/{DictionaryId}/Items/BatchDelete"
			body: "DictionaryItemIds"
		};
	}
}

// 查询字典信息请求
message SearchDictionaryInfoRequest{
	// 字典名称
	// @maxLength(64)
	google.protobuf.StringValue Name = 1;
	// 字典类型
	// @maxLength(32)
	google.protobuf.StringValue Type = 2;
	// 页码
	// @min(0)
	google.protobuf.Int32Value Page = 3;
	// 条目数
	// @min(0)
	google.protobuf.Int32Value Size = 4;

}

// 字典信息数据包
message DictioanryInfoPacket{
	// 字典标识
	// @required
	// @guid
	string Id = 1;
	// 字典名称
	// @required
	// @maxLength(64)
	string Name = 2;
	// 字典编码
	// @required
	// @maxLength(32)
	string Code = 3;
	// 字典类型
	// @required
	// @maxLength(32)
	string Type = 4;
	// 字典描述
	// @maxLength(128)
	google.protobuf.StringValue Description = 5;
	// 字典是否有效
	// @required
	bool Valid = 6;
}

// 分页字典信息数据包
message PagedDictionaryInfoPacket {
	// 页码
	// @min(0)
	int32 Page = 1;
	// 条目数
	// @min(0)
	int32 Size = 2;
	// 数据总数
	// @min(0)
	int64 Total = 3;
	// 条件过滤后的数据量
	// @min(0)
	int64 Count = 4;
	// 字典信息数据
	// @required
	repeated DictioanryInfoPacket Items = 5;
}

// 查询字典信息响应
message SearchDictionaryInfoResponse{
	// 状态码
	int32 Code = 1;
	// 是否成功
	bool Succeeded = 2;
	// 消息
	string Message = 3;
	// 错误
	// @exception
	google.protobuf.StringValue Error = 4;
    // 响应时间
	// @datetime
	string DateTime = 5;
	// 响应时间戳
	// @timestamp
	int64 Timestamp = 6;
	// 字典信息数据
	// @required
	PagedDictionaryInfoPacket Data = 7;
}

// 获取数据字典请求
message ReadDictionaryInfoRequest{
	// 字典类型
	// @required
	// @guid
	string DictionaryId = 1;
}

// 获取数据字典响应
message ReadDictionaryInfoResponse{
	// 状态码
	int32 Code = 1;
	// 是否成功
	bool Succeeded = 2;
	// 消息
	string Message = 3;
	// 错误
	// @exception
	google.protobuf.StringValue Error = 4;
	// 响应时间
	// @datetime
	string DateTime = 5;
	// 响应时间戳
	// @timestamp
	int64 Timestamp = 6;
	// 字典数据
	// @required
	repeated DictioanryInfoPacket Data = 7;
}

// 创建数据字典请求
message CreateDictionaryRequest{
	// 字典名称
	// @required
	// @maxLength(64)
	string Name = 1;
	// 字典编码
	// @required
	// @maxLength(32)
	string Code = 2;
	// 字典类型
	// @required
	// @maxLength(32)
	string Type = 3;
	// 字典描述
	// @maxLength(128)
	google.protobuf.StringValue Description = 4;
	// 字典是否有效
	// @required
	bool Valid = 5;
}

// 批量创建字典请求
message BatchCreateDictionariyRequest{
	// 字典数据
	// @required
	repeated CreateDictionaryRequest Batch = 1;
}

// 更新字典数据包
message UpdateDictionaryInfoPacket{
	// 字典名称
	// @maxLength(64)
	google.protobuf.StringValue Name = 1;
	// 字典编码
	// @maxLength(32)
	google.protobuf.StringValue Code = 2;
	// 字典类型
	// @maxLength(32)
	google.protobuf.StringValue Type = 3;
	// 字典描述
	// @maxLength(128)
	google.protobuf.StringValue Description = 4;
	// 字典是否有效
	google.protobuf.BoolValue Valid = 5;
}

// 更新字典请求
message UpdateDictionaryRequest{
	// 字典标识
	// @required
	// @guid
	string DictionaryId = 1;
	// 字典信息
	// @required
	UpdateDictionaryInfoPacket Dictionary = 2;
}

// 批量更新字典请求
message BatchUpdateDictionaryRequest{
	// 字典数据
	// @required
	repeated UpdateDictionaryRequest Batch = 1;
}

// 删除字典请求
message DeleteDictionaryRequest{
	// 字典标识
	// @required
	// @guid
	string DictionaryId = 1;
}

// 批量删除字典请求
message BatchDeleteDictionaryRequest{
	// 字典标识
	// @required
	// @guid
	repeated string DictionaryIds = 1;
}

// 查找数据字典项目请求
message SearchDictionaryItemInfoRequest{
	// 字典标识
	// @required
	// @guid
	string DictionaryId = 1;
	// 字典项目键
	// @maxLength(64)
	google.protobuf.StringValue Key = 2;
	// 字典项目值
	// @maxLength(128)
	google.protobuf.StringValue Value = 3;
	// 页码
	// @min(0)
	google.protobuf.Int32Value Page = 4;
	// 条目数
	// @min(0)
	google.protobuf.Int32Value Size = 5;
}

// 字典项目数据包
message DictionaryItemInfoPacket{
	// 字典项目标识
	// @required
	// @guid
	string Id = 1;
	// 字典标识
	// @required
	// @guid
	string DictionaryId = 2;
	// 字典项目键
	// @required
	// @maxLength(64)
	string Key = 3;
	// 字典项目值
	// @required
	// @maxLength(128)
	string Value = 4;
	// 字典项目描述
	// @maxLength(128)
	google.protobuf.StringValue Description = 5;
	// 字典项目是否有效
	// @required
	bool Valid = 6;
}

// 分页字典项目数据包
message PagedDictionaryItemInfoPacket{
	// 页码
	// @min(0)
	int32 Page = 1;
	// 条目数
	// @min(0)
	int32 Size = 2;
	// 数据总数
	// @min(0)
	int64 Total = 3;
	// 条件过滤后的数据量
	// @min(0)
	int64 Count = 4;
	// 字典项目数据
	// @required
	repeated DictionaryItemInfoPacket Items = 5;
}

// 查找字典项目响应
message SearchDictionaryItemInfoResponse{
	// 状态码
	int32 Code = 1;
	// 是否成功
	bool Succeeded = 2;
	// 消息
	string Message = 3;
	// 错误
	// @exception
	google.protobuf.StringValue Error = 4;
	// 响应时间
	// @datetime
	string DateTime = 5;
	// 响应时间戳
	// @timestamp
	int64 Timestamp = 6;
	// 字典项目数据
	// @required
	PagedDictionaryItemInfoPacket Data = 7;
}

// 读取字典项目请求
message ReadDictionaryItemInfoRequest{
	// 字典标识
	// @required
	// @guid
	string DictionaryId = 1;
	// 字典项目标识
	// @required
	// @guid
	string DictionaryItemId = 2;
}

// 读取字典项目响应
message ReadDictionaryItemInfoResponse{
	// 状态码
	int32 Code = 1;
	// 是否成功
	bool Succeeded = 2;
	// 消息
	string Message = 3;
	// 错误
	// @exception
	google.protobuf.StringValue Error = 4;
	// 响应时间
	// @datetime
	string DateTime = 5;
	// 响应时间戳
	// @timestamp
	int64 Timestamp = 6;
	// 字典项目数据
	// @required
	DictionaryItemInfoPacket Data = 7;
}

// 创建字典项目数据包
message CreateDictionaryItemPacket{
	// 字典项目键
	// @required
	// @maxLength(64)
	string Key = 1;
	// 字典项目值
	// @required
	// @maxLength(128)
	string Value = 2;
	// 字典项目描述
	// @maxLength(128)
	google.protobuf.StringValue Description = 3;
	// 字典项目是否有效
	// @required
	bool Valid = 4;
}

// 创建字典项目请求
message CreateDictionaryItemRequest{
	// 字典标识
	// @required
	// @guid
	string DictionaryId = 1;
	// 字典项目信息
	// @required
	CreateDictionaryItemPacket DictionaryItem = 2;
}

// 批量创建字典项目请求
message BatchCreateDictionaryItemRequest{
	// 字典标识
	// @required
	// @guid
	string DictionaryId = 1;
	// 字典项目数据
	// @required
	repeated CreateDictionaryItemRequest Batch = 2;
}

// 更新字典项目数据包
message UpdateDictionaryItemPacket{
	// 字典项目键
	// @maxLength(64)
	google.protobuf.StringValue Key = 2;
	// 字典项目值
	// @maxLength(128)
	google.protobuf.StringValue Value = 3;
	// 字典项目描述
	// @maxLength(128)
	google.protobuf.StringValue Description = 4;
	// 字典项目是否有效
	google.protobuf.BoolValue Valid = 5;
}

// 更新字典项目请求
message UpdateDictionaryItemRequest{
	// 字典标识
	// @required
	// @guid
	string DictionaryId = 1;
	// 字典项目标识
	// @required
	// @guid
	string DictionaryItemId = 2;
	// 字典项目信息
	// @required
	UpdateDictionaryItemPacket DictionaryItem = 3;
}

// 批量更新字典项目数据包
message BatchUpdateDictionaryItemPacket{
	// 字典项目标识
	// @required
	// @guid
	string DictionaryItemId = 1;
	// 字典项目信息
	// @required
	UpdateDictionaryItemPacket DictionaryItem = 2;
}

// 批量更新字典项目请求
message BatchUpdateDictionaryItemRequest{
	// 字典标识
	// @required
	// @guid
	string DictionaryId = 1;
	// 字典项目数据
	// @required
	repeated BatchUpdateDictionaryItemPacket Batch = 2;
}

// 删除字典项目请求
message DeleteDictionaryItemRequest{
	// 字典标识
	// @required
	// @guid
	string DictionaryId = 1;
	// 字典项目标识
	// @required
	// @guid
	string DictionaryItemId = 2;
}

// 批量删除字典项目请求
message BatchDeleteDictionaryItemRequest{
	// 字典标识
	// @required
	// @guid
	string DictionaryId = 1;
	// 字典项目标识
	// @required
	// @guid
	repeated string DictionaryItemIds = 2;
}